--- a/certifications.html
+++ b/certifications.html
@@ -95,7 +95,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="cloud"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified data engineer - associate</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -202,7 +202,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="brain"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified ai practitioner</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -229,7 +229,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="cloud"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified solutions architect - associate</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -286,7 +286,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="shield-check"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia cybersecurity analyst (cysa+)</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -312,7 +312,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="search"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia security analytics practitioner (csap)</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -338,7 +338,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="server"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia secure infrastructure specialist (csis)</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -364,7 +364,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="lock"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia security+</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -390,7 +390,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="settings"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia it operations specialist (cios)</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -416,7 +416,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="network"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia network+</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -442,7 +442,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔒</div>
+                            <div class="cert-icon"><i data-lucide="computer"></i></div>
                             <div>
                                 <h3 class="cert-title">comptia a+</h3>
                                 <div class="cert-issuer">comptia</div>
@@ -498,7 +498,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔷</div>
+                            <div class="cert-icon"><i data-lucide="hexagon"></i></div>
                             <div>
                                 <h3 class="cert-title">scoping use cases in foundry & aip</h3>
                                 <div class="cert-issuer">palantir technologies</div>
@@ -525,7 +525,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔷</div>
+                            <div class="cert-icon"><i data-lucide="diamond"></i></div>
                             <div>
                                 <h3 class="cert-title">certified palantir foundry aware professional</h3>
                                 <div class="cert-issuer">palantir technologies</div>
@@ -552,7 +552,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔷</div>
+                            <div class="cert-icon"><i data-lucide="layers"></i></div>
                             <div>
                                 <h3 class="cert-title">foundry & aip builder foundations</h3>
                                 <div class="cert-issuer">palantir technologies</div>
@@ -583,7 +583,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🏢</div>
+                            <div class="cert-icon"><i data-lucide="building"></i></div>
                             <div>
                                 <h3 class="cert-title">dlamp scholar</h3>
                                 <div class="cert-issuer">deloitte</div>
@@ -609,7 +609,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🛡️</div>
+                            <div class="cert-icon"><i data-lucide="shield"></i></div>
                             <div>
                                 <h3 class="cert-title">cyber awareness challenge 2025</h3>
                                 <div class="cert-issuer">u.s. department of defense</div>
@@ -661,7 +661,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🌐</div>
+                            <div class="cert-icon"><i data-lucide="globe"></i></div>
                             <div>
                                 <h3 class="cert-title">network technician career path</h3>
                                 <div class="cert-issuer">cisco</div>
