--- a/coursework.html
+++ b/coursework.html
@@ -93,7 +93,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">💻</div>
+                            <div class="cert-icon"><i data-lucide="monitor"></i></div>
                             <div>
                                 <div class="cert-title">Introduction to Information Technology</div>
                                 <div class="cert-issuer">IT-101</div>
@@ -107,7 +107,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔐</div>
+                            <div class="cert-icon"><i data-lucide="shield-check"></i></div>
                             <div>
                                 <div class="cert-title">Information Security and Privacy [Honors]</div>
                                 <div class="cert-issuer">IT-203</div>
@@ -121,7 +121,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🌐</div>
+                            <div class="cert-icon"><i data-lucide="network"></i></div>
                             <div>
                                 <div class="cert-title">Introduction to Telecommunications, Networking and Security</div>
                                 <div class="cert-issuer">IT-215</div>
@@ -135,7 +135,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🗄️</div>
+                            <div class="cert-icon"><i data-lucide="database"></i></div>
                             <div>
                                 <div class="cert-title">Database Administration</div>
                                 <div class="cert-issuer">IT-240</div>
@@ -149,7 +149,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🌍</div>
+                            <div class="cert-icon"><i data-lucide="globe"></i></div>
                             <div>
                                 <div class="cert-title">Web Technologies</div>
                                 <div class="cert-issuer">IT-301</div>
@@ -163,7 +163,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">⚖️</div>
+                            <div class="cert-icon"><i data-lucide="scale"></i></div>
                             <div>
                                 <div class="cert-title">Societal and Ethical Issues in IT</div>
                                 <div class="cert-issuer">IT-302</div>
@@ -177,7 +177,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🖥️</div>
+                            <div class="cert-icon"><i data-lucide="computer"></i></div>
                             <div>
                                 <div class="cert-title">Operating Systems</div>
                                 <div class="cert-issuer">IT-311</div>
@@ -191,7 +191,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🤝</div>
+                            <div class="cert-icon"><i data-lucide="handshake"></i></div>
                             <div>
                                 <div class="cert-title">Community Projects</div>
                                 <div class="cert-issuer">IT-313</div>
@@ -208,7 +208,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">📡</div>
+                            <div class="cert-icon"><i data-lucide="radio"></i></div>
                             <div>
                                 <div class="cert-title">Advanced Telecommunications & Networking</div>
                                 <div class="cert-issuer">IT-333</div>
@@ -222,7 +222,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🛡️</div>
+                            <div class="cert-icon"><i data-lucide="shield"></i></div>
                             <div>
                                 <div class="cert-title">Advanced Cybersecurity</div>
                                 <div class="cert-issuer">IT-460</div>
@@ -236,7 +236,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔗</div>
+                            <div class="cert-icon"><i data-lucide="link"></i></div>
                             <div>
                                 <div class="cert-title">Internetworking</div>
                                 <div class="cert-issuer">IT-461</div>
@@ -253,7 +253,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">📊</div>
+                            <div class="cert-icon"><i data-lucide="bar-chart-3"></i></div>
                             <div>
                                 <div class="cert-title">Data Science & Machine Learning</div>
                                 <div class="cert-issuer">IT-340</div>
@@ -267,7 +267,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">👤</div>
+                            <div class="cert-icon"><i data-lucide="user"></i></div>
                             <div>
                                 <div class="cert-title">Human-Computer Interaction</div>
                                 <div class="cert-issuer">IT-347</div>
@@ -284,7 +284,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🐍</div>
+                            <div class="cert-icon"><i data-lucide="code"></i></div>
                             <div>
                                 <div class="cert-title">Introduction to Programming</div>
                                 <div class="cert-issuer">CS-149</div>
@@ -298,7 +298,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔧</div>
+                            <div class="cert-icon"><i data-lucide="wrench"></i></div>
                             <div>
                                 <div class="cert-title">Data Structures and Advanced Programming for IT</div>
                                 <div class="cert-issuer">IT-160E</div>
@@ -312,7 +312,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">⚡</div>
+                            <div class="cert-icon"><i data-lucide="zap"></i></div>
                             <div>
                                 <div class="cert-title">Computational Structures and Logic</div>
                                 <div class="cert-issuer">IT-201E</div>
@@ -326,7 +326,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🔌</div>
+                            <div class="cert-icon"><i data-lucide="plug"></i></div>
                             <div>
                                 <div class="cert-title">Digital Electronics</div>
                                 <div class="cert-issuer">IT-212</div>
@@ -343,7 +343,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🎯</div>
+                            <div class="cert-icon"><i data-lucide="target"></i></div>
                             <div>
                                 <div class="cert-title">Capstone Design</div>
                                 <div class="cert-issuer">IT-444</div>
@@ -357,7 +357,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🚀</div>
+                            <div class="cert-icon"><i data-lucide="rocket"></i></div>
                             <div>
                                 <div class="cert-title">Capstone Implementation</div>
                                 <div class="cert-issuer">IT-445</div>
@@ -371,7 +371,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">💼</div>
+                            <div class="cert-icon"><i data-lucide="briefcase"></i></div>
                             <div>
                                 <div class="cert-title">Internship in Information Technology</div>
                                 <div class="cert-issuer">IT-433</div>
@@ -388,7 +388,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">🧪</div>
+                            <div class="cert-icon"><i data-lucide="flask"></i></div>
                             <div>
                                 <div class="cert-title">Problem Solving in Science and Technology [Honors]</div>
                                 <div class="cert-issuer">ISAT-160H</div>
