--- a/leadership.html
+++ b/leadership.html
@@ -93,7 +93,7 @@
                 <div class="leadership-grid">
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            🎓
+                            <i data-lucide="graduation-cap"></i>
                         </div>
                         <h3 class="leadership-title">valedictorian candidate</h3>
                         <p class="leadership-description">
@@ -105,7 +105,7 @@
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            🏆
+                            <i data-lucide="trophy"></i>
                         </div>
                         <h3 class="leadership-title">honors college member</h3>
                         <p class="leadership-description">
@@ -116,7 +116,7 @@
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            👥
+                            <i data-lucide="users"></i>
                         </div>
                         <h3 class="leadership-title">founding it ambassador</h3>
                         <p class="leadership-description">
@@ -127,7 +127,7 @@
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            📚
+                            <i data-lucide="book-open"></i>
                         </div>
                         <h3 class="leadership-title">teaching fellow</h3>
                         <p class="leadership-description">
@@ -139,7 +139,7 @@
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            🔬
+                            <i data-lucide="microscope"></i>
                         </div>
                         <h3 class="leadership-title">first-year researcher</h3>
                         <p class="leadership-description">
@@ -151,7 +151,7 @@
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            👑
+                            <i data-lucide="crown"></i>
                         </div>
                         <h3 class="leadership-title">madison tech society president</h3>
                         <p class="leadership-description">
