--- a/leadership.html
+++ b/leadership.html
@@ -105,23 +105,34 @@
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            <i data-lucide="trophy"></i>
+                            <i data-lucide="users"></i>
                         </div>
-                        <h3 class="leadership-title">honors college member</h3>
+                        <h3 class="leadership-title">founding & lead it ambassador</h3>
                         <p class="leadership-description">
-                            selected for james madison university honors college, participating in advanced coursework 
-                            and interdisciplinary studies. represented jmu at nchc, cyberwarcon, capwic, and shmoocon conferences.
+                            founding & lead ambassador for the information technology department (2023-present). 
+                            led it major to become one of jmu's fastest-growing programs as top-ranked ambassador by hours contributed.
                         </p>
                     </div>
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            <i data-lucide="users"></i>
+                            <i data-lucide="shield"></i>
                         </div>
-                        <h3 class="leadership-title">founding it ambassador</h3>
+                        <h3 class="leadership-title">executive officer, cyber defense club</h3>
                         <p class="leadership-description">
-                            led it major to become one of jmu's fastest-growing programs as top-ranked ambassador by hours contributed. 
-                            founded and led the information technology program ambassadors, significantly growing the program.
+                            executive officer of cyber defense club (2025-present). led team to first place victory 
+                            at the virginia military institute cyber competition, demonstrating exceptional cybersecurity leadership.
+                        </p>
+                    </div>
+
+                    <div class="leadership-card">
+                        <div class="leadership-icon">
+                            <i data-lucide="briefcase"></i>
+                        </div>
+                        <h3 class="leadership-title">internal vice president, madison consulting club</h3>
+                        <p class="leadership-description">
+                            internal vice president of madison consulting club (2025-present), one of the biggest clubs 
+                            in jmu's college of business. driving strategic initiatives and fostering professional development.
                         </p>
                     </div>
 
@@ -129,35 +140,21 @@
                         <div class="leadership-icon">
                             <i data-lucide="book-open"></i>
                         </div>
-                        <h3 class="leadership-title">teaching fellow</h3>
+                        <h3 class="leadership-title">teaching assistant</h3>
                         <p class="leadership-description">
-                            appointed as instructor for honors 100 course, a position typically reserved for senior educators. 
-                            designed and delivered comprehensive coursework for first-year honors students, demonstrating 
-                            exceptional teaching and leadership capabilities.
+                            teaching assistant for it-201 computational structures and logic (2024-2025). 
+                            mentored students in discrete mathematics, logic, and computational theory fundamentals.
                         </p>
                     </div>
 
                     <div class="leadership-card">
                         <div class="leadership-icon">
-                            <i data-lucide="microscope"></i>
+                            <i data-lucide="heart"></i>
                         </div>
-                        <h3 class="leadership-title">first-year researcher</h3>
+                        <h3 class="leadership-title">student leader & innovator, stem corps</h3>
                         <p class="leadership-description">
-                            led musiccpr project (computer science) + development as a first-year researcher. 
-                            collaborated on web application development and scholarly research, contributing to 
-                            innovative educational technology solutions.
-                        </p>
-                    </div>
-
-                    <div class="leadership-card">
-                        <div class="leadership-icon">
-                            <i data-lucide="crown"></i>
-                        </div>
-                        <h3 class="leadership-title">madison tech society president</h3>
-                        <p class="leadership-description">
-                            president of madison tech society (mts) since march 2024. leading technology initiatives 
-                            and fostering innovation within the university community, driving forward-thinking 
-                            technological solutions and collaboration.
+                            volunteered as student leader & innovator with stem corps (2024). 
+                            helped elementary school children learn stem concepts, fostering early interest in technology and science.
                         </p>
                     </div>
                 </div>
