Minor Bug Fixes

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <div class="subtitle" role="text">deployment strategist @ palantir (<a href="https://finance.yahoo.com/quote/PLTR/" target="_blank" rel="noopener noreferrer" style="color: inherit; text-decoration: none;">nyse: $pltr</a>)</div>
+                    <div class="subtitle" role="text">deployment strategist @ palantir (<a href="https://finance.yahoo.com/quote/PLTR/" target="_blank" rel="noopener noreferrer" class="stock-ticker">nyse: $pltr</a>)</div>
                     <h1 id="hero-title" data-text="will j. jedrzejczak">will j. jedrzejczak</h1>
                     <p class="description" role="text">
                         it all started with youtube videos about computer viruses. what began as childhood curiosity 
