--- a/leadership.html
+++ b/leadership.html
@@ -120,8 +120,8 @@
                         </div>
                         <h3 class="leadership-title">executive officer, cyber defense club</h3>
                         <p class="leadership-description">
-                            executive officer of cyber defense club (2025-present). led team to first place victory 
-                            at the virginia military institute cyber competition, demonstrating exceptional cybersecurity leadership.
+                            executive officer of cyber defense club (2025-present). the cyber defense club achieved 
+                            first place at the virginia military institute cyber competition, demonstrating exceptional cybersecurity excellence.
                         </p>
                     </div>
 
