--- a/coursework.html
+++ b/coursework.html
@@ -388,7 +388,7 @@
                 <div class="certifications-grid">
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon"><i data-lucide="flask"></i></div>
+                            <div class="cert-icon"><i data-lucide="lightbulb"></i></div>
                             <div>
                                 <div class="cert-title">Problem Solving in Science and Technology [Honors]</div>
                                 <div class="cert-issuer">ISAT-160H</div>
