--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                 <a href="https://www.jmu.edu/research/student/fyre/past-projects.shtml" target="_blank" rel="noopener noreferrer" class="jmu-link-card">
                     <div class="jmu-link-icon">
-                        <i data-lucide="flask"></i>
+                        <i data-lucide="microscope"></i>
                     </div>
                     <div class="jmu-link-content">
                         <h3>FYRE Research Project</h3>
