--- a/certifications.html
+++ b/certifications.html
@@ -122,7 +122,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="code"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified developer - associate</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -149,7 +149,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="brain"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified machine learning engineer - associate</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -176,7 +176,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="settings"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified sysops administrator - associate</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -255,7 +255,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="cloud"></i></div>
                             <div>
                                 <h3 class="cert-title">aws certified cloud practitioner</h3>
                                 <div class="cert-issuer">amazon web services (aws)</div>
@@ -635,7 +635,7 @@
 
                     <div class="cert-card">
                         <div class="cert-header">
-                            <div class="cert-icon">☁️</div>
+                            <div class="cert-icon"><i data-lucide="zap"></i></div>
                             <div>
                                 <h3 class="cert-title">create serverless applications</h3>
                                 <div class="cert-issuer">microsoft</div>
