--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                         of my junior year asking if i'd be willing to drop out after may 2026. naturally, i said yes.
                         <br><br>
                         when i'm not building secure ai/ml solutions for the government, you'll find me lifting weights, 
-                        discovering new music, or outperforming the market by a mile on my fidelity account.
+                        discovering new music, or outperforming the market by a mile on my fidelity account. ultimately, 
+                        i'm just extremely passionate about building things that help other people.
                     </p>
                     <div class="hero-buttons" role="group" aria-label="action buttons">
                         <a href="contact.html" class="btn-primary" aria-label="go to contact page to get in touch">
