--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
                         </div>
                         <div class="profile-title" id="profile-title">will j. jedrzejczak</div>
                         <div class="profile-subtitle">b.s. it • james madison university</div>
+                        <div class="palantir-affiliation">
+                            <img src="images/PLTR_LOGO.png" alt="palantir technologies logo" class="palantir-logo">
+                            <span>deployment strategist</span>
+                        </div>
                     </div>
                 </div>
             </div>
